--- a/ProjectReport_Simulation.Rmd
+++ b/ProjectReport_Simulation.Rmd
@@ -94,6 +94,8 @@ for (i in 1:1000) { # Run a for loop for 1000 times
         # observations is calculated, concatenated with
         # the mns variable to update the previous mns.
         }
+
+# Plot Figure 1 (Comparison between sample mean and theoretical mean)
 hist(mns, xlim = c(2,8), main = "Results of one thousand simulations", 
      xlab = "x", ylab = "Count")
 abline(v = mean(mns), lwd = 3)
@@ -107,6 +109,8 @@ abline(v = mean(mns), col = "blue", lwd = 3)
 legend("topright", pch = 20, col = c("black", "blue"), 
        c("Simulations", "Normal distribution"), cex = 0.7)
 
+# Plot Figure 2 (Comparison between sample variance 
+# and theoretical variance)
 hist(mns, xlim = c(2,8))
 x <- seq(2, 8, length = 1000)
 y <- dnorm(x, mean = 5, sd = 5/sqrt(40))
@@ -121,6 +125,7 @@ abline(v = tsd, col = "red")
 legend("topright", pch = 20, col = c("black", "red"), 
        c("Simulations", "Normal distribution"), cex = 0.65)
 
+# Plot cumulative mean of the simulations to show the Law of Large Numbers
 meanmns <- NULL
 varmns <- NULL
 for (i in 1:1000) {
@@ -133,6 +138,7 @@ g1 <- g1 + geom_hline(yintercept = 5.0) + geom_line(size = 2)
 g1 <- g1 + labs(x = "Number of observations", y = "Cumulative mean")
 g1
 
+# Plot cumulative variance of the simulations to show the Law of Large Numbers
 g2 <- ggplot(data.frame(x = 2:1000, 
              y = varmns[2:1000]), aes(x=x, y=y)) # Omit the first y value since it is NA
 g2 <- g2 + geom_hline(yintercept = 5^2/40) + geom_line(size = 2)
