--- a/ProjectReport_Simulation.Rmd
+++ b/ProjectReport_Simulation.Rmd
@@ -45,7 +45,7 @@ tvar
 
 The sample variance is quite close to the theoretical variance. As is shown in Figure 2 (See Appendix for reference), there is not much difference between the standard deviation of the simulation and the theoretical standard deviation (highlighted in red lines) of the normal distribution curve, which indicates a good estimation of theoretical variance using the sample variance from 1000 simulations.
 
-# Distribution
+# Discussion: Is the Distribution Approximately Normal?
 
 ```{r, echo=FALSE}
 mns <- NULL
@@ -70,9 +70,11 @@ for (i in 1:1000) {
         varmns <- c(varmns, var(mns))
         }
 library(ggplot2)
-g <- ggplot(data.frame(x = 2:1000, y = varmns[2:1000]), aes(x=x, y=y))
-g <- g + geom_hline(yintercept = 5^2/40) + geom_line(size = 2)
-g
+g2 <- ggplot(data.frame(x = 2:1000, 
+             y = varmns[2:1000]), aes(x=x, y=y)) # Omit the first y value since it is NA
+g2 <- g2 + geom_hline(yintercept = 5^2/40) + geom_line(size = 2)
+g2 <- g2 + labs(x = "Number of observations", y = "Cumulative variance")
+g2
 ```
 As the number of simulation becomes larger, the estimated sample variance has some fluctuations but is getting more and more closer to the value of theoretical variance (0.625, highlighted by the horizontal line), which is consistent with the Law of large numbers.
 
@@ -144,7 +146,7 @@ g2 <- g2 + labs(x = "Number of observations", y = "Cumulative variance")
 g2
 ```
 
-## Figures
+## Simulation Figures
 ```{r, echo=FALSE, fig.width = 4.5, fig.height = 4.5, fig.cap="Comparisons of sample mean and theoretical mean"}
 mns <- NULL
 for (i in 1:1000) mns <- c(mns, mean(rexp(40, rate = 0.2)))
