Format update on ToothGrowth report

--- a/ProjectReport_ToothGrowth.Rmd
+++ b/ProjectReport_ToothGrowth.Rmd
@@ -11,21 +11,7 @@ opts_chunk$set(dev = 'pdf')
 This report is the second part of the Coursera statistical inference course project. In this report, the ToothGrowth data in the R datasets will be analyzed using some basic inferential statistics. Exploratory data analyses and summary of the data will be first given. After that, comparisons of tooth growth by supp and dose will be performed respectively, with the relevant confidence intervals calculated; different hypotheses and assumptions will be formulated and tested using T statistics. Conclusions will be made based on the statistical results.
 
 # Exploratory Analyses on ToothGrowth Data
-
-Exploratory plots:
-
-```{r, echo=FALSE, fig.width=3.5, fig.height=3.5}
-library(datasets)
-library(ggplot2)
-qplot(supp, len, data = ToothGrowth, geom = "boxplot", fill = supp, main = "Tooth Growth by Different Supp")
-len <- ToothGrowth$len
-dose <- as.factor(ToothGrowth$dose)
-g <- ggplot(data.frame(len, dose), aes(y = len,x = dose, fill = dose))
-g <- g + geom_boxplot() + labs(title = "Tooth Growth by Different Dose", x = "dose", y = "len")
-g
-```
-
-Based on the exploratory plot, in terms of supplements, OJ seems to contribute to a higher tooth growth compared with VC; in terms of dose, a higher dose seems to increase the length of tooth growth. Both observations require hypothesis testing.
+For exploratory plots, see Appendix for reference. Based on the plots, in terms of supplements (Figure 1), OJ seems to contribute to a higher tooth growth compared with VC; in terms of dose (Figure 2), a higher dose seems to increase the length of tooth growth. Both observations require hypothesis testing.
 
 # Basic Summary of the Data
 ```{r, echo=FALSE}
@@ -36,8 +22,6 @@ summary(ToothGrowth)
 ## Basic Summary of Tooth Growth by Supp
 ## Basic Summary of Tooth Growth by Dose
 
-3. Use confidence intervals and/or hypothesis tests to compare tooth growth by supp and dose. (Only use the techniques from class, even if there's other approaches worth considering)
-
 # Comparisons of Tooth Growth by Supp
 
 Assuming that the data of tooth growth by OJ and VC are both normally distributed, and the population variances are unequal.
@@ -46,6 +30,7 @@ Assuming that the data of tooth growth by OJ and VC are both normally distribute
 
 **Ha**: the tooth growth by VC is larger than the tooth growth by OJ (VC > OJ).
 
+**Hypothesis testing**:
 ```{r, echo=FALSE}
 library(datasets)
 VC <- ToothGrowth$len[1:30]
@@ -62,7 +47,7 @@ t.test(OJ, VC, paired = FALSE, var.equal = FALSE)
 
 According to the statistical test, the confidence interval did not exclude zero, and the p-value is not less than 0.05.
 
-Therefore, the null hypothesis is not rejected. There is no difference between tooth growth by VC and tooth growth by OJ.
+**Conclusion**: The null hypothesis is not rejected. There is no difference between tooth growth by VC and tooth growth by OJ.
 
 # Comparisons of Tooth Growth by Dose
 ## Dose 0.5 v.s. Dose 1.0
@@ -73,6 +58,7 @@ Assuming that the data of tooth growth by dose 0.5 and dose 1.0 are normally dis
 
 **Ha**: the tooth growth by dose 0.5 is smaller than the tooth growth by dose 1.0 (dose 0.5 < dose 1.0).
 
+**Hypothesis testing**:
 ```{r, echo=FALSE}
 library(datasets)
 Dose12 <- subset(ToothGrowth, dose %in% c(0.5,1))
@@ -81,7 +67,7 @@ t.test(len ~ dose, paired = FALSE, var.equal = TRUE, data = Dose12)
 
 According to the statistical test, both the lower and upper limit of the confidence interval is smaller than zero, and the p-value is much smaller than 0.05.
 
-Therefore, the null hypothesis is rejected. The tooth growth by dose 0.5 is smaller than the tooth growth by dose 1.0.
+**Conclusion**: The null hypothesis is rejected. The tooth growth by dose 0.5 is smaller than the tooth growth by dose 1.0.
 
 ## Dose 0.5 v.s. Dose 2.0
 
@@ -91,6 +77,7 @@ Assuming that the data of tooth growth by dose 0.5 and dose 2.0 are normally dis
 
 **Ha**: the tooth growth by dose 0.5 is smaller than the tooth growth by dose 2.0 (dose 0.5 < dose 2.0).
 
+**Hypothesis testing**:
 ```{r, echo=FALSE}
 library(datasets)
 Dose13 <- subset(ToothGrowth, dose %in% c(0.5,2))
@@ -99,7 +86,7 @@ t.test(len ~ dose, paired = FALSE, var.equal = FALSE, data = Dose13)
 
 According to the statistical test, both the lower and upper limit of the confidence interval is smaller than zero, and the p-value is much smaller than 0.05.
 
-Therefore, the null hypothesis is rejected. The tooth growth by dose 0.5 is smaller than the tooth growth by dose 2.0.
+**Conclusion**: The null hypothesis is rejected. The tooth growth by dose 0.5 is smaller than the tooth growth by dose 2.0.
 
 ## Dose 0.5 v.s. Dose 2.0
 
@@ -109,6 +96,7 @@ Assuming that the data of tooth growth by dose 1.0 and dose 2.0 are normally dis
 
 **Ha**: the tooth growth by dose 1.0 is smaller than the tooth growth by dose 2.0 (dose 1.0 < dose 2.0).
 
+**Hypothesis testing**:
 ```{r, echo=FALSE}
 library(datasets)
 Dose23 <- subset(ToothGrowth, dose %in% c(1,2))
@@ -117,4 +105,25 @@ t.test(len ~ dose, paired = FALSE, var.equal = FALSE, data = Dose23)
 
 According to the statistical test, both the lower and upper limit of the confidence interval is smaller than zero, and the p-value is much smaller than 0.05.
 
-Therefore, the null hypothesis is rejected. The tooth growth by dose 1.0 is smaller than the tooth growth by dose 2.0.
+**Conclusion**: The null hypothesis is rejected. The tooth growth by dose 1.0 is smaller than the tooth growth by dose 2.0.
+
+# Appendix
+## R Codes
+To be added
+
+## Exploratory Plots
+```{r, echo=FALSE, fig.cap="Tooth Growth by Different Supp"}
+library(datasets)
+library(ggplot2)
+qplot(supp, len, data = ToothGrowth, geom = "boxplot", fill = supp, main = "Tooth Growth by Different Supp")
+```
+
+```{r, echo=FALSE, fig.cap="Tooth Growth by Different Dose"}
+library(datasets)
+library(ggplot2)
+len <- ToothGrowth$len
+dose <- as.factor(ToothGrowth$dose)
+g <- ggplot(data.frame(len, dose), aes(y = len,x = dose, fill = dose))
+g <- g + geom_boxplot() + labs(title = "Tooth Growth by Different Dose", x = "dose", y = "len")
+g
+```
